--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
     "@nuxtjs/eslint-module": "^0.2.1",
+    "@nuxtjs/tailwindcss": "^4.0.3",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.15.1",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.0.1",
     "nodemon": "^1.18.9",
+    "postcss": "^8.2.10",
     "prettier": "^1.16.4"
   }
 }
