--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,4 +1,4 @@
 {
     "title": "AgileBox",
-    "description": "Starter blog using Forestry CMS with Nuxt."
+    "description": "Przestrzeń zwinnych liderów."
 }
