--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "frontmatter-markdown-loader": "^1.8.0",
     "node-sass": "^4.12.0",
     "nuxt": "^2.15.4",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "vue-renderless-carousel": "^1.3.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
