--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "node-sass": "^4.12.0",
     "nuxt": "^2.15.4",
     "sass-loader": "^7.1.0",
-    "vue-renderless-carousel": "^1.3.1"
+    "swiper": "^6.7.0",
+    "vue-awesome-swiper": "^4.1.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
