connect hompage template with data

--- a/.forestry/front_matter/templates/home-page.yml
+++ b/.forestry/front_matter/templates/home-page.yml
@@ -30,7 +30,9 @@ fields:
       required: false
     label: Company / Function
   config:
-    min: 
-    max: 
+    min:
+    max:
     labelField: ''
   label: Quotes
+pages:
+- content/data/home.json
